src-tauri/src/check_output_v21.txt
    Checking pdfbull v0.1.0 (E:\PDFbull\src-tauri)
warning: unused import: `micropdf::ffi::document::Document`
 --> src\annotations.rs:3:5
  |
3 | use micropdf::ffi::document::Document;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `micropdf::ffi::document::Document`
 --> src\compression.rs:2:5
  |
2 | use micropdf::ffi::document::Document;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `micropdf::ffi::document::Document`
 --> src\filters.rs:4:5
  |
4 | use micropdf::ffi::document::Document;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `micropdf::fitz::colorspace::Colorspace`
 --> src\filters.rs:5:5
  |
5 | use micropdf::fitz::colorspace::Colorspace;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `micropdf::ffi::document::Document`
 --> src\forms.rs:2:5
  |
2 | use micropdf::ffi::document::Document;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `micropdf::fitz::colorspace::Colorspace`
 --> src\pdf_engine.rs:2:5
  |
2 | use micropdf::fitz::colorspace::Colorspace;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Rect`
 --> src\pdf_engine.rs:4:40
  |
4 | use micropdf::fitz::geometry::{Matrix, Rect};
  |                                        ^^^^

error[E0599]: no method named `load_page` found for mutable reference `&mut micropdf::ffi::document::Document` in the current scope
  --> src\annotations.rs:17:14
   |
16 |           let page = doc
   |  ____________________-
17 | |             .load_page(page_num as i32)
   | |             -^^^^^^^^^ method not found in `&mut micropdf::ffi::document::Document`
   | |_____________|
   |

error[E0599]: no method named `save` found for mutable reference `&mut micropdf::ffi::document::Document` in the current scope
  --> src\compression.rs:10:13
   |
10 |         doc.save(&output_path, "garbage=compact,compress")
   |             ^^^^ method not found in `&mut micropdf::ffi::document::Document`

error[E0599]: no method named `load_page` found for mutable reference `&mut micropdf::ffi::document::Document` in the current scope
  --> src\filters.rs:41:14
   |
40 |           let page = doc
   |  ____________________-
41 | |             .load_page(page_num as i32)
   | |             -^^^^^^^^^ method not found in `&mut micropdf::ffi::document::Document`
   | |_____________|
   |

error[E0599]: no method named `load_page` found for reference `&micropdf::ffi::document::Document` in the current scope
  --> src\forms.rs:13:25
   |
13 |         let _page = doc.load_page(page_num).map_err(|e: Error| e.to_string())?;
   |                         ^^^^^^^^^ method not found in `&micropdf::ffi::document::Document`

error[E0599]: no function or associated item named `open` found for struct `micropdf::ffi::document::Document` in the current scope
  --> src\pdf_engine.rs:26:21
   |
26 |     match Document::open(&path) {
   |                     ^^^^ function or associated item not found in `micropdf::ffi::document::Document`
   |
note: if you're trying to build a new `micropdf::ffi::document::Document`, consider using `micropdf::ffi::document::Document::new` which returns `micropdf::ffi::document::Document`
  --> C:\Users\suyas\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\micropdf-0.9.0\src\ffi\document.rs:98:5
   |
98 |     pub fn new(data: Vec<u8>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> src\pdf_engine.rs:28:30
   |
28 |             let page_count = doc.page_count();
   |                              ^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\pdf_engine.rs:32:23
   |
32 |         Err(e) => Err(e.to_string()),
   |                       ^ cannot infer type

error[E0599]: no function or associated item named `open` found for struct `micropdf::ffi::document::Document` in the current scope
  --> src\pdf_engine.rs:51:21
   |
51 |     match Document::open(temp_file.to_str().unwrap()) {
   |                     ^^^^ function or associated item not found in `micropdf::ffi::document::Document`
   |
note: if you're trying to build a new `micropdf::ffi::document::Document`, consider using `micropdf::ffi::document::Document::new` which returns `micropdf::ffi::document::Document`
  --> C:\Users\suyas\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\micropdf-0.9.0\src\ffi\document.rs:98:5
   |
98 |     pub fn new(data: Vec<u8>) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> src\pdf_engine.rs:53:31
   |
53 |             let _page_count = doc.page_count();
   |                               ^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\pdf_engine.rs:64:23
   |
64 |         Err(e) => Err(e.to_string()),
   |                       ^ cannot infer type

error[E0599]: no method named `page_count` found for struct `micropdf::ffi::document::Document` in the current scope
  --> src\pdf_engine.rs:72:31
   |
72 |         let count = wrapper.0.page_count();
   |                               ^^^^^^^^^^ private field, not a method

error[E0599]: no method named `load_page` found for reference `&micropdf::ffi::document::Document` in the current scope
  --> src\pdf_engine.rs:85:14
   |
84 |           let page = doc
   |  ____________________-
85 | |             .load_page(page_num as i32)
   | |             -^^^^^^^^^ method not found in `&micropdf::ffi::document::Document`
   | |_____________|
   |

error[E0599]: no method named `load_page` found for reference `&micropdf::ffi::document::Document` in the current scope
   --> src\pdf_engine.rs:104:14
    |
103 |           let page = doc
    |  ____________________-
104 | |             .load_page(page_num as i32)
    | |             -^^^^^^^^^ method not found in `&micropdf::ffi::document::Document`
    | |_____________|
    |

error[E0599]: no method named `load_page` found for mutable reference `&mut micropdf::ffi::document::Document` in the current scope
   --> src\pdf_engine.rs:125:14
    |
124 |           let page = doc
    |  ____________________-
125 | |             .load_page(page_num as i32)
    | |             -^^^^^^^^^ method not found in `&mut micropdf::ffi::document::Document`
    | |_____________|
    |

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `pdfbull` (lib) generated 7 warnings
error: could not compile `pdfbull` (lib) due to 14 previous errors; 7 warnings emitted
